# sledhead-imu

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  data_dictionary.md  metric_specs.md  rf_features.md
examples/: rf_feature_demo.py
notebooks/: 01_ingest_normalize.ipynb  02_detect_trim_runs.ipynb  03_segment_by_athlete.ipynb  04_aggregate_per_day.ipynb  05_filtering_hp_lp_rolling.ipynb  06_features_exposure_2g.ipynb  07_labels_merge.ipynb  08_model_ready_build.ipynb  09_train_test_split.ipynb  10_models_mlr.ipynb  10_models_nn.ipynb  10_train_random_forest.ipynb  11_validate_define_cutoffs.ipynb  12_predictions_alerts.ipynb
notebooks/00_exploration/: 000_quick_look.ipynb
scripts/: EASIEST_METHOD.md  SIMPLE_DOWNLOAD_INSTRUCTIONS.md  comprehensive_evaluation.py  convert_and_process_new_data.py  convert_xlsx.py  download_sharepoint_data.py  pipeline_with_real_data.py  test_sharepoint_connection.py  train_and_evaluate_rf.py
services/cli/: sledhead.py
services/jobs/: make_model_ready.sh  train_mlr.sh  train_nn.sh  validate_cutoffs.sh
src/sledhead_imu/: __init__.py  config.py
src/sledhead_imu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sledhead_imu/alerts/: __init__.py  generate_alerts.py  thresholds.py
src/sledhead_imu/features/: __init__.py  (+2 more)
tests/: conftest.py  test_features_exposure_2g.py  test_features_random_forest.py  test_filtering.py  test_models_random_forest.py  test_prep_split.py  test_segmentation.py
(+28 files in other folders)
